--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <img src="https://img.xatblog.net/image/vJ5FNt3u5v.gif"/>
   <h2>cutey`</h2>
-  <p>I've always been  insane. Isn't that interesting?</p>
+  <p>Sissy stuff.</p>
   <span class="left bottom">~</span>
   <span class="right bottom">~</span>
 </div>
